--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 #All Variables Are Required
-BOT_TOKEN = "6755451205:AAGs17HTNeUgV5d6UkDhZ5RsNrPN8RJrU5Y"
-TELEGRAM_API = "25401847"
-TELEGRAM_HASH = "ca8a79df8704ed676fca6891b7bc08ce"
-FSUB_ID = "-1001724395212"
-DUMP_CHAT_ID = "-1002037108501"
-MONGO_URL = "mongodb+srv://hegodal811:rsRu17pspZAcp6V7@cluster0.prsvqax.mongodb.net/?retryWrites=true&w=majority"
-ADMINS = "5864846606"
+BOT_TOKEN = "7011638444:AAE6tPcgWGDj88I7sSl5__9-YAT5ApYE4fs"
+TELEGRAM_API = "25377875"
+TELEGRAM_HASH = "cf80e342be48570ca2e4c9d2c7695413"
+FSUB_ID = "-1002112563830"
+DUMP_CHAT_ID = "-1002147298597"
+MONGO_URL = "mongodb+srv://nehal969797:nehalsingh969797@cluster0.7ccmpy4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+ADMINS = "2034654684"
