--- a/stackhost.yaml
+++ b/stackhost.yaml
@@ -6,7 +6,7 @@ python_version: "3.10"
 
 commands:
   build:
-    - "pip install -r requirements.txt"
+    - "pip3 install -r requirements.txt"
   package:
     - "nano inxi"
   start:
