--- a/stackhost.yaml
+++ b/stackhost.yaml
@@ -1,6 +1,6 @@
 user:
-  name: ishikki
-  github: ishikki-akabane
+  name: Mrking671
+  github: Mrking671
 
 python_version: "3.10"
 
@@ -10,7 +10,7 @@ commands:
   package:
     - "nano inxi"
   start:
-    - "python3 bot.py"
+    - "python3 terabox.py"
 
 env:
   - "ENVIRONMENT=production"
