--- a/config.env
+++ b/config.env
@@ -2,7 +2,7 @@
 BOT_TOKEN = "7244860871:AAF3f4dX6ro_Qckb4uZBRlgdkNCHeMMDBGA"
 TELEGRAM_API = "24444928"
 TELEGRAM_HASH = "0a278a515cd13ec8802b7dabed73dede"
-FSUB_ID = "-1002112563830"
-DUMP_CHAT_ID = "-1002147298597"
+FSUB_ID = "-1002189431069"
+DUMP_CHAT_ID = -1002214286582"
 MONGO_URL = "mongodb+srv://nehal969797:nehalsingh969797@cluster0.7ccmpy4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 ADMINS = "7079923017"
